# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
.github/workflows/: before-commit.yml  unittest.yml
hooks/: check_accidental_assignment.py  check_hex_case.py  check_include_guards.py  check_unsigned_suffix.py
tests/: test_cases_check_accidental_assignment.py  test_check_accidental_assignment.py
