[metadata]
name = perigoso_pre_commit_hooks
version = 0.1.2
description = pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/perigoso/pre-commit-hooks
author = Rafael Silva
author_email = perigoso@riseup.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-include-guards = hooks.check_include_guards:main
    check-hex-case = hooks.check_hex_case:main
    check-accidental-assignment = hooks.check_accidental_assignment:main

[bdist_wheel]
universal = True

[coverage:run]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
